conjure-typescript/src/test/resources/errors/expected/@palantir/another/index.ts
export { IDifferentPackage, isDifferentPackage } from "@palantir/another/errors";
